impl healthcheck routes (readyz, livez)
